force-app/main/default/objects/Inquiry_History__c/Inquiry_History__c.object-meta.xml
<CustomObject>
    <label>Inquiry History</label>
    <nameField>
        <label>Member Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Inquiry History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>