force-app/main/default/objects/Inquiry_History__c/fields/Bureau_Highmark__c.field-meta.xml
<CustomField>
    <fullName>Bureau_Highmark__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bureau Highmark</label>
    <referenceTo>Bureau_Highmark__c</referenceTo>
    <relationshipLabel>Inquiry History</relationshipLabel>
    <relationshipName>Inquiry_History</relationshipName>
    <type>Lookup</type>
</CustomField>