force-app/main/default/objects/Inquiry_History__c/fields/InquiryDate__c.field-meta.xml
<CustomField>
    <fullName>InquiryDate__c</fullName>
    <label>InquiryDate</label>
    <type>Date</type>
</CustomField>