force-app/main/default/objects/Inquiry_History__c/fields/OwnershipType__c.field-meta.xml
<CustomField>
    <fullName>OwnershipType__c</fullName>
    <label>OwnershipType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>